docs for db3ac4a commit

--- a/development/admin/servers/lib/LIB-MS.html
+++ b/development/admin/servers/lib/LIB-MS.html
@@ -1359,7 +1359,8 @@ It has three features:</p>
 <ul>
 <li>provide a listing of directory contents.</li>
 <li>transfer a file to user.</li>
-<li>Source files can either come from local file system or from a gitlab instance.</li>
+<li>Source files can either come from local file system or from
+  a gitlab instance.</li>
 </ul>
 <p>The library microservice is designed to manage and serve files,
 functions, and models to users, allowing them to access and interact
