--- a/development/user/features.html
+++ b/development/user/features.html
@@ -1290,9 +1290,9 @@
 <li>Support for different kinds of Digital Twins</li>
 <li>CFD, Simulink, co-simulation, FEM, ROM, ML etc.</li>
 <li>Integrates with other Digital Twin frameworks</li>
-<li>Facilitate availability of Digital Twin as a service</li>
+<li>Facilitate availability of Digital Twin as a Service</li>
 <li>Collaboration and reuse</li>
-<li>Private workspaces for authoring and verification
+<li>Private workspaces for verification
   of reusable assets, trial run DTs</li>
 <li>Cost effectiveness</li>
 </ul>
@@ -1366,7 +1366,7 @@ The currently available services are:</p>
 </tbody>
 </table>
 <p>In addition, the workspaces are connected to the Internet so
-all the Digital Twins run within their workspace can interact
+all the Digital Twins running in the workspace can interact
 with both the internal and external services.</p>
 <p>The users can publish and reuse the digital twin assets
 available on the platform. In addition, users can run their
