--- a/development/user/motivation.html
+++ b/development/user/motivation.html
@@ -1313,7 +1313,7 @@ this problem. Some of them are:</p>
 <li>Support for transition from existing workflows to DT frameworks</li>
 <li>Create DTs from reusable assets</li>
 <li>Enable users to share DT assets</li>
-<li>Offer DTs as a service</li>
+<li>Offer DTs as a Service</li>
 <li>Integrate the DTs with external software systems</li>
 <li>Separate configurations of independent DT components</li>
 </ul>
