--- a/development/user/examples/index.html
+++ b/development/user/examples/index.html
@@ -1293,19 +1293,11 @@ digital twins within the platform.</p>
 <h2 id="copy-examples">Copy Examples</h2>
 <p>The first step is to copy all the example code into your
 user workspace within the DTaaS.
-Use these shell commands to copy all the examples
+Use the given shell script to copy all the examples
 into <code>/workspace/examples</code> directory.</p>
 <div class="language-bash highlight"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre><span></span><span class="normal"><a href="#__codelineno-0-1">1</a></span>
-<span class="normal"><a href="#__codelineno-0-2">2</a></span>
-<span class="normal"><a href="#__codelineno-0-3">3</a></span>
-<span class="normal"><a href="#__codelineno-0-4">4</a></span>
-<span class="normal"><a href="#__codelineno-0-5">5</a></span>
-<span class="normal"><a href="#__codelineno-0-6">6</a></span></pre></div></td><td class="code"><div><pre><span></span><code><span id="__span-0-1"><a id="__codelineno-0-1" name="__codelineno-0-1"></a><span class="ch">#!/bin/bash</span>
-</span><span id="__span-0-2"><a id="__codelineno-0-2" name="__codelineno-0-2"></a><span class="nb">cd</span><span class="w"> </span>/root/Desktop/
-</span><span id="__span-0-3"><a id="__codelineno-0-3" name="__codelineno-0-3"></a>wget<span class="w"> </span>-P<span class="w"> </span>workspace<span class="w"> </span>https://github.com/INTO-CPS-Association/DTaaS-examples/archive/refs/heads/main.zip
-</span><span id="__span-0-4"><a id="__codelineno-0-4" name="__codelineno-0-4"></a>unzip<span class="w"> </span>workspace/main.zip<span class="w"> </span>-d<span class="w"> </span>workspace
-</span><span id="__span-0-5"><a id="__codelineno-0-5" name="__codelineno-0-5"></a>mv<span class="w"> </span>workspace/DTaaS-examples-main<span class="w"> </span>workspace/examples
-</span><span id="__span-0-6"><a id="__codelineno-0-6" name="__codelineno-0-6"></a>rm<span class="w"> </span>workspace/main.zip
+<span class="normal"><a href="#__codelineno-0-2">2</a></span></pre></div></td><td class="code"><div><pre><span></span><code><span id="__span-0-1"><a id="__codelineno-0-1" name="__codelineno-0-1"></a>wget<span class="w"> </span>https://raw.githubusercontent.com/INTO-CPS-Association/DTaaS-examples/main/getExamples.sh
+</span><span id="__span-0-2"><a id="__codelineno-0-2" name="__codelineno-0-2"></a>bash<span class="w"> </span>getExamples.sh
 </span></code></pre></div></td></tr></table></div>
 <h2 id="example-list">Example List</h2>
 <p>The digital twins provided in examples vary in their complexity. It is best
