--- a/development/thanks.html
+++ b/development/thanks.html
@@ -1294,9 +1294,9 @@ Henrik Ejersbo, Tanusree Roy, Farshid Naseri</p>
    Digital Twin as a Service (DTaaS): A Platform for
    Digital Twin Developers and Users
    <a href="https://arxiv.org/abs/2305.07244">arXiv preprint arXiv:2305.07244</a>.</li>
-<li>Astitva Sehgal</li>
-<li>Tanusree Roy</li>
-<li>Farshid Naseri</li>
+<li>Astitva Sehgal for developer and example documentation.</li>
+<li>Tanusree Roy and Farshid Naseri for asking interesting questions
+   that ended up in FAQs.</li>
 </ol>
 
 
