docs for a70a7268 commit

--- a/development/admin/client/CLIENT.html
+++ b/development/admin/client/CLIENT.html
@@ -1432,10 +1432,10 @@ serving the following routes.</p>
 <div class="language-js highlight"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre><span></span><span class="normal"><a href="#__codelineno-1-1">1</a></span>
 <span class="normal"><a href="#__codelineno-1-2">2</a></span>
 <span class="normal"><a href="#__codelineno-1-3">3</a></span>
-<span class="normal"><a href="#__codelineno-1-4">4</a></span></pre></div></td><td class="code"><div><pre><span></span><code><span id="__span-1-1"><a id="__codelineno-1-1" name="__codelineno-1-1"></a><span class="nx">https</span><span class="o">:</span><span class="nx">foo</span><span class="p">.</span><span class="nx">com</span><span class="o">/&lt;</span><span class="nx">username</span><span class="o">&gt;</span><span class="err">/lab</span>
-</span><span id="__span-1-2"><a id="__codelineno-1-2" name="__codelineno-1-2"></a><span class="nx">https</span><span class="o">:</span><span class="nx">foo</span><span class="p">.</span><span class="nx">com</span><span class="o">/&lt;</span><span class="nx">username</span><span class="o">&gt;</span><span class="err">/terminals/main</span>
-</span><span id="__span-1-3"><a id="__codelineno-1-3" name="__codelineno-1-3"></a><span class="nx">https</span><span class="o">:</span><span class="nx">foo</span><span class="p">.</span><span class="nx">com</span><span class="o">/&lt;</span><span class="nx">username</span><span class="o">&gt;</span><span class="err">/tools/vnc/?password=vncpassword</span>
-</span><span id="__span-1-4"><a id="__codelineno-1-4" name="__codelineno-1-4"></a><span class="nx">https</span><span class="o">:</span><span class="nx">foo</span><span class="p">.</span><span class="nx">com</span><span class="o">/&lt;</span><span class="nx">username</span><span class="o">&gt;</span><span class="err">/tools/vscode/</span>
+<span class="normal"><a href="#__codelineno-1-4">4</a></span></pre></div></td><td class="code"><div><pre><span></span><code><span id="__span-1-1"><a id="__codelineno-1-1" name="__codelineno-1-1"></a><span class="nx">https</span><span class="o">:</span><span class="c1">//foo.com/&lt;username&gt;/lab</span>
+</span><span id="__span-1-2"><a id="__codelineno-1-2" name="__codelineno-1-2"></a><span class="nx">https</span><span class="o">:</span><span class="c1">//foo.com/&lt;username&gt;/terminals/main</span>
+</span><span id="__span-1-3"><a id="__codelineno-1-3" name="__codelineno-1-3"></a><span class="nx">https</span><span class="o">:</span><span class="c1">//foo.com/&lt;username&gt;/tools/vnc/?password=vncpassword</span>
+</span><span id="__span-1-4"><a id="__codelineno-1-4" name="__codelineno-1-4"></a><span class="nx">https</span><span class="o">:</span><span class="c1">//foo.com/&lt;username&gt;/tools/vscode/</span>
 </span></code></pre></div></td></tr></table></div>
 <p>The <code>username</code> is the user workspace created using ML Workspace docker container.
 Please follow the instructions in
