docs for b73b8d6e commit

--- a/development/user/examples/index.html
+++ b/development/user/examples/index.html
@@ -1320,6 +1320,7 @@ to use the examples in the following order.</p>
 <li><a href="mass-spring-damper/index.html">Mass Spring Damper</a></li>
 <li><a href="water_tank_FI/index.html">Water Tank Fault Injection</a></li>
 <li><a href="water_tank_swap/index.html">Water Tank Model Swap</a></li>
+<li><a href="drobotti-rmqfmu/index.html">Desktop Robotti and RabbitMQ</a></li>
 </ol>
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7 7-7Z"/></svg></span> <a href="https://github.com/INTO-CPS-Association/DTaaS-examples">DTaaS examples</a></p>
 
