--- a/development/index.html
+++ b/development/index.html
@@ -1279,7 +1279,7 @@
   
 
 
-<h1 id="what-is-dtaas">What is DTaaS</h1>
+<h1 id="what-is-dtaas">What is DTaaS?</h1>
 <p>The Digital Twin as a Service (DTaaS) software platform is useful
 to <font color="orange"> <strong>Build, Use and Share</strong> </font> digital twins (DTs).</p>
 <p><img alt="🦾" class="twemoji" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@14.1.2/assets/svg/1f9be.svg" title=":mechanical_arm:" /> <font color="orange"><strong>Build</strong></font>: The
