--- a/development/user/examples/water_tank_swap/index.html
+++ b/development/user/examples/water_tank_swap/index.html
@@ -1567,7 +1567,7 @@ The following table shows the configuration files and their purpose.</p>
 </table>
 <h2 id="run-the-example">Run the example</h2>
 <p>To run the example, change your present directory.</p>
-<div class="language-bash highlight"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre><span></span><span class="normal"><a href="#__codelineno-0-1">1</a></span></pre></div></td><td class="code"><div><pre><span></span><code><span id="__span-0-1"><a id="__codelineno-0-1" name="__codelineno-0-1"></a><span class="nb">cd</span><span class="w"> </span>workspace/examples/digital_twins/water_tank_swap
+<div class="language-bash highlight"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre><span></span><span class="normal"><a href="#__codelineno-0-1">1</a></span></pre></div></td><td class="code"><div><pre><span></span><code><span id="__span-0-1"><a id="__codelineno-0-1" name="__codelineno-0-1"></a><span class="nb">cd</span><span class="w"> </span>/workspace/examples/digital_twins/water_tank_swap
 </span></code></pre></div></td></tr></table></div>
 <p>If required, change the permission of files you need to execute, for example:</p>
 <div class="language-bash highlight"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre><span></span><span class="normal"><a href="#__codelineno-1-1">1</a></span></pre></div></td><td class="code"><div><pre><span></span><code><span id="__span-1-1"><a id="__codelineno-1-1" name="__codelineno-1-1"></a>chmod<span class="w"> </span>+x<span class="w"> </span>lifecycle/create
@@ -1612,6 +1612,8 @@ at <code>/workspace/examples/data/water_tank_swap/output</code>.</p>
 <div class="language-bash highlight"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre><span></span><span class="normal"><a href="#__codelineno-5-1">1</a></span></pre></div></td><td class="code"><div><pre><span></span><code><span id="__span-5-1"><a id="__codelineno-5-1" name="__codelineno-5-1"></a>lifecycle/terminate
 </span></code></pre></div></td></tr></table></div>
 <h2 id="references">References</h2>
+<p>The complete source of this example is available on
+<a href="https://github.com/hejersbo/dtaas-wt-swap">model swap</a> github repository.</p>
 <p>The runtime model (FMU) swap mechanism demonstrated by the experiment
 is detailed in the paper:</p>
 <div class="language-text highlight"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre><span></span><span class="normal"><a href="#__codelineno-6-1">1</a></span>
