--- a/development/admin/vagrant/two-machines.html
+++ b/development/admin/vagrant/two-machines.html
@@ -1580,7 +1580,7 @@ you can see the following services active within server2 (<em>services.foo.com</
 </thead>
 <tbody>
 <tr>
-<td align="left">InfluxDB and visualization service</td>
+<td align="left">InfluxDB database</td>
 <td align="left">services.foo.com</td>
 </tr>
 <tr>
@@ -1588,20 +1588,20 @@ you can see the following services active within server2 (<em>services.foo.com</
 <td align="left">services.foo.com:3000</td>
 </tr>
 <tr>
-<td align="left">MQTT communication service</td>
+<td align="left">MQTT Broker</td>
 <td align="left">services.foo.com:1883</td>
 </tr>
 <tr>
-<td align="left">RabbitMQ communication service</td>
+<td align="left">RabbitMQ Broker</td>
 <td align="left">services.foo.com:5672</td>
 </tr>
 <tr>
-<td align="left">RabbitMQ management service</td>
+<td align="left">RabbitMQ Broker management website</td>
 <td align="left">services.foo.com:15672</td>
 </tr>
 <tr>
-<td align="left"></td>
-<td align="left"></td>
+<td align="left">MongoDB database</td>
+<td align="left">services.foo.com:27017</td>
 </tr>
 </tbody>
 </table>
