--- a/development/admin/services.html
+++ b/development/admin/services.html
@@ -1499,6 +1499,10 @@ at the following ports / URLs.</p>
 <td align="left">MQTT Broker</td>
 <td align="left">services.foo.com:1883</td>
 </tr>
+<tr>
+<td align="left">MongoDB database</td>
+<td align="left">services.foo.com:27017</td>
+</tr>
 </tbody>
 </table>
 <p>The firewall and network access settings of corporate / cloud network need to be
