docs for 79febcab commit

--- a/version0.6/developer/system/architecture.html
+++ b/version0.6/developer/system/architecture.html
@@ -2866,8 +2866,8 @@ core requirements of the system.</p>
 </ol>
 <p>If you are interested, please take a look at
 the <a href="C4-L2_diagram.png">C4 architectural diagram</a>.</p>
-<p>A mapping of the architectural components to related pages in
-the documentation is available in the table.</p>
+<p>A mapping of the architectural components to the implementation
+components is available in the table.</p>
 <table>
 <thead>
 <tr>
@@ -2878,15 +2878,15 @@ the documentation is available in the table.</p>
 <tbody>
 <tr>
 <td style="text-align: left;">Service Router</td>
-<td style="text-align: left;"><a href="https://github.com/INTO-CPS-Association/DTaaS/tree/feature/distributed-demo/servers/config/gateway#the-gateway-server">Traefik Gateway</a></td>
+<td style="text-align: left;"><a href="https://doc.traefik.io/traefik/">Traefik Gateway</a></td>
 </tr>
 <tr>
 <td style="text-align: left;">Web Application</td>
-<td style="text-align: left;"><a href="../client/client.html">React Webapplication</a></td>
+<td style="text-align: left;"><a href="https://github.com/INTO-CPS-Association/DTaaS/blob/feature/distributed-demo/client/README.md">React Webapplication</a></td>
 </tr>
 <tr>
 <td style="text-align: left;">Reusable Assets</td>
-<td style="text-align: left;"><a href="../servers/lib/lib-ms.html">Library Microservice</a></td>
+<td style="text-align: left;"><a href="https://github.com/INTO-CPS-Association/DTaaS/blob/feature/distributed-demo/servers/lib/README.md">Library Microservice</a></td>
 </tr>
 <tr>
 <td style="text-align: left;">Digital Twins and DevOps</td>
@@ -2906,7 +2906,7 @@ the documentation is available in the table.</p>
 </tr>
 <tr>
 <td style="text-align: left;">Digital Twins as Services</td>
-<td style="text-align: left;"><a href="../../user/servers/execution/runner/index.html">DT Runner</a></td>
+<td style="text-align: left;"><a href="https://github.com/INTO-CPS-Association/DTaaS/blob/feature/distributed-demo/servers/execution/runner/README.md">DT Runner</a></td>
 </tr>
 <tr>
 <td style="text-align: left;">Accounting</td>
