--- a/version0.6/developer/system/current-status.html
+++ b/version0.6/developer/system/current-status.html
@@ -2855,7 +2855,7 @@ also gets access to shared DT assets. Users can synchronize their
 private DT assets with external git repositories. In addition,
 the asset repository transparently gets mapped to user workspaces
 within which users can perform DT lifecycle operations.
-There is also a <a href="../servers/lib/lib-ms.html">library microservice</a> which
+There is also a <a href="../../admin/servers/lib/npm.html">library microservice</a> which
 in the long-run will replace the file server.</p>
 <p>Users can run DTs in their workspaces and also permit remote access
 to other users. There is already shared access to internal and
